(images) Fix breaking long filename to avoid menu going off-screen

--- a/src/app/shared/components/misc/image-viewer/image-viewer-title.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer-title.component.scss
@@ -25,7 +25,7 @@
           }
         }
 
-        &.original-filename {
+        .original-filename {
           word-break: break-all;
         }
 
